fix(popover): caret spacing & dropshadow

--- a/packages/styles/scss/components/popover/_popover.scss
+++ b/packages/styles/scss/components/popover/_popover.scss
@@ -7,6 +7,7 @@
 
 @use '../../config' as *;
 @use '../../layer' as *;
+@use '../../spacing' as *;
 @use '../../theme';
 @use '../../utilities/box-shadow' as *;
 @use '../../utilities/button-reset';
@@ -47,7 +48,10 @@ $popover-background-color: custom-property.get-var(
 );
 
 // The drop shadow value used for the popover container
-$popover-drop-shadow: custom-property.get-var('popover-drop-shadow', 'none');
+$popover-drop-shadow: custom-property.get-var(
+  'popover-drop-shadow',
+  drop-shadow(0 $spacing-01 $spacing-01 rgba(0, 0, 0, 0.2))
+);
 
 // The border radius value for the popover container
 $popover-border-radius: custom-property.get-var('popover-border-radius', 2px);
@@ -103,10 +107,8 @@ $popover-caret-height: custom-property.get-var(
   }
 
   // Drop shadow modifier
-  .#{$prefix}--popover--drop-shadow
-    .#{$prefix}--popover
-    > .#{$prefix}--popover-content {
-    filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.2));
+  .#{$prefix}--popover--drop-shadow .#{$prefix}--popover {
+    filter: $popover-drop-shadow;
   }
 
   // Caret tip modifier
@@ -121,7 +123,6 @@ $popover-caret-height: custom-property.get-var(
   .#{$prefix}--popover {
     position: absolute;
     z-index: z('floating');
-    filter: $popover-drop-shadow;
     inset: 0;
     pointer-events: none;
   }
